# FaceLivenessDetection-Windows

./: Dockerfile  README.md
cpp/: CMakeLists.txt  main.cpp  miniai_rec.h
flask/: app.py
python/: main.py  miniai_rec.py
